Updated dev version code to match production code - (found at ProductionManagementFrontend/ProductionManagementBackend

--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -1,11 +1,11 @@
 <li class=list-group-item *ngFor="let lot of hourly; let i = index" >
     <div>
-        <h5>Time: <strong>{{lot.time}}</strong></h5>
-        <h5>Job #: <strong>{{lot.job}}</strong></h5>
-        <h5>Quantity: <strong>{{lot.hard_quantity}}</strong></h5>
-        <h5>Counter: <strong>{{lot.counter_quantity}}</strong></h5>
+        <h5>Time: <br><strong>{{lot.time}}</strong><br>
+        Job #: <br><strong>{{lot.job}}</strong><br>
+        Quantity: <br><strong>{{lot.hard_quantity}}</strong>
+        <div *ngIf="lot.counter_quantity">Counter: <br><strong>{{lot.counter_quantity}}</strong></div></h5>
         <div class="grid">
-            <button class='btn btn-primary' routerLink="edit/{{lot.id}}">Edit This Lot</button>
+            <button class='btn btn-primary' routerLink="edit/{{lot.id}}">Edit</button>
         </div>
     </div>
 </li>
