--- a/frontend/src/app/part/part-show/part-show.component.html
+++ b/frontend/src/app/part/part-show/part-show.component.html
@@ -2,9 +2,9 @@
   <div *ngFor="let part of parts"> 
     <div class="border">
       <div class="grid2">
-        <button *ngIf="!part.possible_quantity" class='btn btn-primary' routerLink="calculator/job/{{part.id}}">Length Calculation</button>
+        <button *ngIf="!part.possible_quantity" class='btn btn-primary' routerLink="calculator/job/{{part.id}}">Length Calc</button>
         <button *ngIf="part.possible_quantity" class='btn btn-info' routerLink="calculator/{{part.id}}">Remaining Bars</button>
-        <button *ngIf="!part.weight_quantity" class='btn btn-success' routerLink="calculator/weight/{{part.id}}">Weight Calculation</button>
+        <button *ngIf="!part.weight_quantity" class='btn btn-success' routerLink="calculator/weight/{{part.id}}">Weight Calc</button>
       </div>
       <div routerLink="part={{part.part}}">
         <br>
