--- a/frontend/src/app/production/production-list/production-list.component.html
+++ b/frontend/src/app/production/production-list/production-list.component.html
@@ -1,12 +1,13 @@
 <ul class='list-group'>
     <li class=list-group-item *ngFor="let lot of productionLots; let i = index" >
         <div *ngIf="lot.in_question" class="inQuestion">   
-            <button class="btn btn-success" (click)="lotIsGood(lot.id)">Set Lot Good</button><h4>Date: {{lot.date}}</h4>
+            <button class="btn btn-success" (click)="lotIsGood(lot.id)">Set Lot Good</button>
             <div routerLink="single/{{lot.id}}">
-                <h4>Job #:{{lot.job}}</h4>
-                <h4>Shift: {{lot.shift}}</h4>
-                <h4>Quantity: {{lot.quantity}}</h4>
-                <h4>Machine: {{lot.machine}}</h4>
+                <h4>Date: <strong>{{lot.date}}</strong></h4>
+                <h4>Job #: <strong>{{lot.job}}</strong></h4>
+                <h4>Shift: <strong>{{lot.shift}}</strong></h4>
+                <h4>Quantity: <strong>{{lot.quantity}}</strong></h4>
+                <h4>Machine: <strong>{{lot.machine}}</strong></h4>
                 <br>
             </div>
             <div class='grid'>
@@ -20,11 +21,11 @@
         <div *ngIf="!lot.in_question">   
             <button class="btn btn-danger" (click)="lotInQuestion(lot.id)">Set Lot In Question</button>
             <div routerLink="single/{{lot.id}}">
-                <h4>Date: {{lot.date}}</h4>
-                <h4>Job #:{{lot.job}}</h4>
-                <h4>Shift: {{lot.shift}}</h4>
-                <h4>Quantity: {{lot.quantity}}</h4>
-                <h4>Machine: {{lot.machine}}</h4>
+                <h4>Date: <strong>{{lot.date}}</strong></h4>
+                <h4>Job #: <strong>{{lot.job}}</strong></h4>
+                <h4>Shift: <strong>{{lot.shift}}</strong></h4>
+                <h4>Quantity: <strong>{{lot.quantity}}</strong></h4>
+                <h4>Machine: <strong>{{lot.machine}}</strong></h4>
             </div>
             <br>
             <div class='grid'>
