--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,3 +5,14 @@ button{
     height: 100%;
     overflow-wrap: break-word;
 }
+
+h1, h2, h3, h4, h5, h6{
+    line-height: 1.5;
+}
+
+
+.border{
+    border-style: solid;
+    border-color: black;
+    background-color: rgb(235, 235, 235);
+}
