--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -5,6 +5,12 @@
       </div>
       <div class='navbar-default'><strong>
         <ul class = 'nav navbar-nav'>
+          <li
+            routerLinkActive="!active">
+            <div routerLink='/'  class="logo">
+              <img src="../../assets/favicon.png" width="50px">
+            </div>
+          </li>
           <li routerLinkActive="!active"><a routerLink='/'>Home</a></li>
           <li
             *ngIf="!id" 
@@ -23,7 +29,8 @@
             style ='cursor: pointer;'
             class="dropdown-toggle"  
             data-toggle="dropdown" 
-            type="button">Lathe
+            type="button">
+              Lathe
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
@@ -34,11 +41,18 @@
               <li><a routerLink='/parts/calculator'>Length From Weight</a></li>
             </ul>
           </li> 
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
           <li 
             *ngIf="id" 
             routerLinkActive="active" 
             [routerLinkActiveOptions]="{exact: true}">
             <a routerLink='/changes'>Change Log</a></li>
+          <li 
+            *ngIf="id" 
+            routerLinkActive="active" 
+            [routerLinkActiveOptions]="{exact: true}">
+            <a routerLink='/settings'>Settings</a></li>
         </ul>
       </strong>
     </div>
