Updated to have welcome page for new users, and easy production lot navigation by job currently assigned to machine

--- a/frontend/src/app/change-log/change-log.component.html
+++ b/frontend/src/app/change-log/change-log.component.html
@@ -7,56 +7,56 @@
                     class="btn btn-info" 
                     (click)="showLog(0)"
                 >
-                    Show Machine Changes
+                    Show Machine <br>Changes
                 </button>
                 <button 
                     *ngIf="isShown[0]" 
                     class="btn btn-info" 
                     (click)="hideLog(0)"
                 >
-                    Hide Machine Changes
+                    Hide Machine <br>Changes
                 </button>
                 <button 
                     *ngIf="!isShown[1]" 
                     class="btn btn-info" 
                     (click)="showLog(1)"
                 >
-                    Show Part Changes
+                    Show Part <br>Changes
                 </button>
                 <button 
                     *ngIf="isShown[1]" 
                     class="btn btn-info" 
                     (click)="hideLog(1)"
                 >
-                    Hide Part Changes
+                    Hide Part <br>Changes
                 </button>
                 <button 
                     *ngIf="!isShown[2]" 
                     class="btn btn-info" 
                     (click)="showLog(2)"
                 >
-                    Show Hourly Production Changes
+                    Show Hourly <br>Production Changes
                 </button>
                 <button 
                     *ngIf="isShown[2]" 
                     class="btn btn-info" 
                     (click)="hideLog(2)"
                 >
-                    Hide Hourly Production Changes
+                    Hide Hourly <br>Production Changes
                 </button>
                 <button 
                     *ngIf="!isShown[3]" 
                     class="btn btn-info" 
                     (click)="showLog(3)"
                 >
-                    Show Production Lot Changes
+                    Show Production <br> Changes
                 </button>
                 <button 
                     *ngIf="isShown[3]" 
                     class="btn btn-info" 
                     (click)="hideLog(3)"
                 >
-                    Hide Production Lot Changes
+                    Hide Production <br>Changes
                 </button>
             </div>
             <div class="grid">
