--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,5 +4,5 @@
     <app-tutorial></app-tutorial>
 </div>
 <br>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate()"></router-outlet>
 
