--- a/frontend/src/app/production/production.component.css
+++ b/frontend/src/app/production/production.component.css
@@ -6,3 +6,9 @@ input.ng-invalid.ng-touched {
   display: grid;
   grid-template-columns: 50% 50%;
 }
+
+
+.grid2 { 
+  display: grid;
+  grid-template-columns: 40% 20% 40%;
+}
