--- a/frontend/src/app/shared/calender/calender.component.html
+++ b/frontend/src/app/shared/calender/calender.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="container">
+  <div *ngIf="auth.user" class="container">
     <h3>{{welcome}}</h3><br>
     <br>
     <div class="row">
@@ -37,4 +37,8 @@
       </div>  
     </div>
   </div>
+  <div class="border" *ngIf="!auth.user">
+      <app-welcome></app-welcome>
+  </div>
+
 </div>
